--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      min-height: 100vh;
     }
     .container {
       text-align: center;
@@ -22,6 +22,13 @@
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
       max-width: 600px;
+    }
+    .profile-img {
+      width: 200px;
+      height: 200px;
+      object-fit: cover; /* Crops image to fit square nicely */
+      border-radius: 10px;
+      margin-bottom: 1.5rem;
     }
     h1 {
       margin-bottom: 1rem;
@@ -50,10 +57,11 @@
 </head>
 <body>
   <div class="container">
+    <img src="Cory Transparent New.png" alt="Cory Mortensen" class="profile-img" />
     <h1>Invest With Cory</h1>
     <p>As Founder of One-9 Holdings, I have raised over $6M from investors and deployed those funds into high-return real estate investments, earning investors a target 15%–20% ROI annually.</p>
-    <a href="https://www.linkedin.com/in/your-linkedin-username" class="button" target="_blank">Connect on LinkedIn</a>
-    <a href="https://calendly.com/your-link" class="button" target="_blank">Book a Call</a>
+    <a href="https://www.linkedin.com/in/mortensencory/" class="button" target="_blank">Connect on LinkedIn</a>
+    <a href="https://scheduler.zoom.us/one-9holdings/30-minute-investor-meeting" class="button" target="_blank">Book a Call</a>
   </div>
 </body>
 </html>
