--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       height: auto;
       max-height: 400px;
       object-fit: cover;
+      object-fit: top;
       border-bottom: 3px solid #0073e6;
     }
 
