--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
 
     .hero-img {
       width: 100%;
+      max-width: 300px;
       height: auto;
-      max-height: 400px;
-      border-bottom: 3px solid #0073e6;
+      display: block;
+      margin: 0 auto 2rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
 
     h1 {
-      margin-top: 2rem;
+      margin-top: 0;
       font-size: 2rem;
       color: #1a1a1a;
     }
