--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 
     .hero-img {
       width: 100%;
-      max-width: 300px;
-      height: auto;
+      height: 100%;
       display: block;
       margin: 0 auto 2rem;
       border-radius: 10px;
