--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Invest With Cory</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <style>
     body {
       margin: 0;
@@ -39,7 +40,8 @@
       font-size: 1.15rem;
       margin: 1rem 0 2rem;
       line-height: 1.6;
-      color: #555;
+      color: #000;
+      font-weight: 500;
     }
 
     .button {
