--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
     .hero-img {
       width: 100%;
-      height: 100%;
+      max-width: 300px;
+      height: auto;
       display: block;
       margin: 0 auto 2rem;
       border-radius: 10px;
